fixing layout bug in contact section

--- a/src/containers/Contact/index.css
+++ b/src/containers/Contact/index.css
@@ -14,6 +14,7 @@
 @media (min-width: 1024px) {
   .contact-section {
     height: 85vh;
+    min-height: 65rem;
   }
 }
 
